plugins {
    id 'com.android.application'
}

android {
    compileSdk 28

    defaultConfig {
        applicationId "com.tumuyan.ncnn.realsr"
        minSdk 24
        targetSdk 28
        versionCode 37
        versionName '1.9.2'

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }


    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    android.applicationVariants.all {
        variant ->
            variant.outputs.all {
                outputFileName = "RealSR-NCNN-Android-GUI-armv8a-${variant.versionName}.apk"
            }
    }

    lint {
        baseline = file("lint-baseline.xml")
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    namespace 'com.tumuyan.ncnn.realsr'
}

dependencies {
    // Dependency 'androidx.appcompat:appcompat:1.4.1' requires API level 31
    implementation 'androidx.appcompat:appcompat:1.3.0'
    implementation 'com.google.android.material:material:1.5.0-alpha01'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'

    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
}